--- a/intex.html
+++ b/intex.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="C:\Users\CSC LAB 18\Downloads\IMG-20250320-WA0009.jpg" class="profile-picture">
+            <img src="IMG-20250320-WA0009.jpg" class="profile-picture">
             <h1>akalya</h1>
-            <p>Am information technology</p>
+            <p> information technology</p>
         </div>
     </header>
 
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>cyber security </b>expert and technology enthusiast who is passionate about helping organizations protect their data and create secure online environments. I'm driven by the desire to put technology to work for the greater good and empower individuals and businesses to benefit from the digital revolution. With over 7 years of experience in the field, I'm dedicated to staying up to date with the latest trends and innovations in the cyber security landscape. I'm also committed to helping others learn more about the importance of online security and how to stay safe online..</p>
+            <p>I'm a <b>Student </b></p>
         </div>
     </section>
 
@@ -134,37 +134,18 @@
             <ul>
                 <li>CyberSecurity</li>
                 <li>Internet of Things</li>
-                <li>Cloud Computing</li>
                 <li>Python</li>
-                <li>IBM cloud</li>
-                <li>ML & AI</li>
                 <li>java</li>
-                <li>Blockchain</li>
                 <li>c++</li>
-                <li>Java script</li>
             </ul>
         </div>
     </section>
-
-    <section id="projects">
-        <div class="section-content">
-            <h2>Projects</h2>
-            <ul>
-                <li><a href="#">AI Based alternator control system</a></li>
-                <li><a href="https://github.com/techtrainer20/blockchain.git">Cloud Security IBM</a></li>
-                <li><a href="#">IBM chetbot</a></li>
-                <li><a href="#">chetbot</a></li> 
-                <!-- Add more project links here -->
-            </ul>
-        </div>
-    </section>
-
     <section id="resume">
     
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="C:\Users\CSC LAB 18\Downloads\akalya.jpg.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="akalya.jpg.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
