--- a/intex.html
+++ b/intex.html
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>Student </b></p>
+            <p>I'm a <b>Student </b>who is interested in technology willing to explore more in technology</p>
         </div>
     </section>
 
