--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="IMG-20250320-WA0009.jpg" class="profile-picture">
+            <img src="akalya.jpg.lnk" class="profile-picture">
             <h1>akalya</h1>
             <p> information technology</p>
         </div>
@@ -145,7 +145,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="akalya.jpg.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="akalya" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
